k8s/mlops-assignment/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heart-disease-api
  namespace: app
  labels:
    app: heart-disease
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heart-disease
  template:
    metadata:
      labels:
        app: heart-disease
    spec:
      containers:
      - name: api
        image: sourikdasbits/bitsmlops:heart-disease-api-v2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
