k8s/mlops-assignment/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heart-disease-service
  namespace: app
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/path: "/metrics"
    prometheus.io/port: "8000"
spec:
  type: ClusterIP
  selector:
    app: heart-disease
  ports:
  - port: 9000
    targetPort: 8000
